# photo_colorize_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  imaging.py  models.py  pipeline.py  pyproject.toml  requirements-export.txt  requirements.txt  settings.py
tests/: conftest.py  test_bot_guards.py  test_imaging.py  test_pipeline_plan.py  test_settings.py
tests/fixtures/photos/: README.md
tools/: compare_colour.py  export_onnx.py
